# graphics-programming-2025

exercises/exercise00/: main.cpp
exercises/exercise02/: CMakeLists.txt  ParticlesApplication.cpp  ParticlesApplication.h
exercises/exercise02/shaders/: particles.frag  particles.vert
exercises/exercise03/: GearsApplication.cpp  GearsApplication.h
exercises/exercise03/shaders/: basic.vert
exercises/exercise05/: ViewerApplication.cpp
libraries/itugl/: CMakeLists.txt
libraries/itugl/src/ituGL/application/: Window.cpp
libraries/itugl/src/ituGL/camera/: Camera.cpp
libraries/itugl/src/ituGL/core/: DeviceGL.cpp
libraries/itugl/src/ituGL/geometry/: VertexArrayObject.cpp
libraries/itugl/src/ituGL/shader/: Shader.cpp
